--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,435 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:is(.dark *));
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-title: var(--font-poppins);
+  --font-text: var(--font-roboto);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+:root {
+  --radius: 0.625rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.145 0 0);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.145 0 0);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.145 0 0);
+  --primary: oklch(0.205 0 0);
+  --primary-foreground: oklch(0.985 0 0);
+  --secondary: oklch(0.97 0 0);
+  --secondary-foreground: oklch(0.205 0 0);
+  --muted: oklch(0.97 0 0);
+  --muted-foreground: oklch(0.556 0 0);
+  --accent: oklch(0.97 0 0);
+  --accent-foreground: oklch(0.205 0 0);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.922 0 0);
+  --input: oklch(0.922 0 0);
+  --ring: oklch(0.708 0 0);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(0.145 0 0);
+  --sidebar-primary: oklch(0.205 0 0);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.97 0 0);
+  --sidebar-accent-foreground: oklch(0.205 0 0);
+  --sidebar-border: oklch(0.922 0 0);
+  --sidebar-ring: oklch(0.708 0 0);
+}
+
+.dark {
+  --background: oklch(0.145 0 0);
+  --foreground: oklch(0.985 0 0);
+  --card: oklch(0.205 0 0);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.205 0 0);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.922 0 0);
+  --primary-foreground: oklch(0.205 0 0);
+  --secondary: oklch(0.269 0 0);
+  --secondary-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.269 0 0);
+  --muted-foreground: oklch(0.708 0 0);
+  --accent: oklch(0.269 0 0);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.556 0 0);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.205 0 0);
+  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(0.488 0.243 264.376);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.269 0 0);
+  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.556 0 0);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground font-text;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+html body {
+  background-image: linear-gradient(
+      135deg,
+      rgba(49, 49, 49, 0.07) 0%,
+      rgba(49, 49, 49, 0.07) 12.5%,
+      rgba(76, 76, 76, 0.07) 12.5%,
+      rgba(76, 76, 76, 0.07) 25%,
+      rgba(102, 102, 102, 0.07) 25%,
+      rgba(102, 102, 102, 0.07) 37.5%,
+      rgba(129, 129, 129, 0.07) 37.5%,
+      rgba(129, 129, 129, 0.07) 50%,
+      rgba(155, 155, 155, 0.07) 50%,
+      rgba(155, 155, 155, 0.07) 62.5%,
+      rgba(182, 182, 182, 0.07) 62.5%,
+      rgba(182, 182, 182, 0.07) 75%,
+      rgba(208, 208, 208, 0.07) 75%,
+      rgba(208, 208, 208, 0.07) 87.5%,
+      rgba(235, 235, 235, 0.07) 87.5%,
+      rgba(235, 235, 235, 0.07) 100%
+    ),
+    linear-gradient(
+      45deg,
+      rgba(5, 5, 5, 0.07) 0%,
+      rgba(5, 5, 5, 0.07) 12.5%,
+      rgba(39, 39, 39, 0.07) 12.5%,
+      rgba(39, 39, 39, 0.07) 25%,
+      rgba(73, 73, 73, 0.07) 25%,
+      rgba(73, 73, 73, 0.07) 37.5%,
+      rgba(107, 107, 107, 0.07) 37.5%,
+      rgba(107, 107, 107, 0.07) 50%,
+      rgba(141, 141, 141, 0.07) 50%,
+      rgba(141, 141, 141, 0.07) 62.5%,
+      rgba(175, 175, 175, 0.07) 62.5%,
+      rgba(175, 175, 175, 0.07) 75%,
+      rgba(209, 209, 209, 0.07) 75%,
+      rgba(209, 209, 209, 0.07) 87.5%,
+      rgba(243, 243, 243, 0.07) 87.5%,
+      rgba(243, 243, 243, 0.07) 100%
+    ),
+    linear-gradient(90deg, #ffffff, #ffffff);
+}
+
+html.dark body {
+  background-image: radial-gradient(
+      circle at center center,
+      transparent 0%,
+      rgb(0, 0, 0) 85%
+    ),
+    linear-gradient(
+      78deg,
+      rgba(192, 192, 192, 0.05) 0%,
+      rgba(192, 192, 192, 0.05) 50%,
+      rgba(60, 60, 60, 0.05) 50%,
+      rgba(60, 60, 60, 0.05) 100%
+    ),
+    linear-gradient(
+      227deg,
+      rgba(97, 97, 97, 0.05) 0%,
+      rgba(97, 97, 97, 0.05) 50%,
+      rgba(52, 52, 52, 0.05) 50%,
+      rgba(52, 52, 52, 0.05) 100%
+    ),
+    linear-gradient(
+      240deg,
+      rgba(98, 98, 98, 0.05) 0%,
+      rgba(98, 98, 98, 0.05) 50%,
+      rgba(249, 249, 249, 0.05) 50%,
+      rgba(249, 249, 249, 0.05) 100%
+    ),
+    linear-gradient(
+      187deg,
+      rgba(1, 1, 1, 0.05) 0%,
+      rgba(1, 1, 1, 0.05) 50%,
+      rgba(202, 202, 202, 0.05) 50%,
+      rgba(202, 202, 202, 0.05) 100%
+    ),
+    linear-gradient(
+      101deg,
+      rgba(61, 61, 61, 0.05) 0%,
+      rgba(61, 61, 61, 0.05) 50%,
+      rgba(254, 254, 254, 0.05) 50%,
+      rgba(254, 254, 254, 0.05) 100%
+    ),
+    linear-gradient(
+      176deg,
+      rgba(237, 237, 237, 0.05) 0%,
+      rgba(237, 237, 237, 0.05) 50%,
+      rgba(147, 147, 147, 0.05) 50%,
+      rgba(147, 147, 147, 0.05) 100%
+    ),
+    linear-gradient(
+      304deg,
+      rgba(183, 183, 183, 0.05) 0%,
+      rgba(183, 183, 183, 0.05) 50%,
+      rgba(57, 57, 57, 0.05) 50%,
+      rgba(57, 57, 57, 0.05) 100%
+    ),
+    radial-gradient(
+      circle at center center,
+      hsl(351, 4%, 12%),
+      hsl(351, 4%, 12%)
+    );
+}
+
+html.dark .bg-grad {
+  background-image: linear-gradient(
+      292deg,
+      rgba(150, 150, 150, 0.03) 0%,
+      rgba(150, 150, 150, 0.03) 20%,
+      rgba(151, 151, 151, 0.03) 20%,
+      rgba(151, 151, 151, 0.03) 40%,
+      rgba(215, 215, 215, 0.03) 40%,
+      rgba(215, 215, 215, 0.03) 60%,
+      rgba(254, 254, 254, 0.03) 60%,
+      rgba(254, 254, 254, 0.03) 80%,
+      rgba(112, 112, 112, 0.03) 80%,
+      rgba(112, 112, 112, 0.03) 100%
+    ),
+    linear-gradient(
+      62deg,
+      rgba(34, 34, 34, 0.03) 0%,
+      rgba(34, 34, 34, 0.03) 20%,
+      rgba(171, 171, 171, 0.03) 20%,
+      rgba(171, 171, 171, 0.03) 40%,
+      rgba(206, 206, 206, 0.03) 40%,
+      rgba(206, 206, 206, 0.03) 60%,
+      rgba(210, 210, 210, 0.03) 60%,
+      rgba(210, 210, 210, 0.03) 80%,
+      rgba(69, 69, 69, 0.03) 80%,
+      rgba(69, 69, 69, 0.03) 100%
+    ),
+    linear-gradient(
+      314deg,
+      rgba(235, 235, 235, 0.03) 0%,
+      rgba(235, 235, 235, 0.03) 20%,
+      rgba(254, 254, 254, 0.03) 20%,
+      rgba(254, 254, 254, 0.03) 40%,
+      rgba(178, 178, 178, 0.03) 40%,
+      rgba(178, 178, 178, 0.03) 60%,
+      rgba(211, 211, 211, 0.03) 60%,
+      rgba(211, 211, 211, 0.03) 80%,
+      rgba(73, 73, 73, 0.03) 80%,
+      rgba(73, 73, 73, 0.03) 100%
+    ),
+    linear-gradient(
+      32deg,
+      rgba(182, 182, 182, 0.01) 0%,
+      rgba(182, 182, 182, 0.01) 12.5%,
+      rgba(208, 208, 208, 0.01) 12.5%,
+      rgba(208, 208, 208, 0.01) 25%,
+      rgba(178, 178, 178, 0.01) 25%,
+      rgba(178, 178, 178, 0.01) 37.5%,
+      rgba(143, 143, 143, 0.01) 37.5%,
+      rgba(143, 143, 143, 0.01) 50%,
+      rgba(211, 211, 211, 0.01) 50%,
+      rgba(211, 211, 211, 0.01) 62.5%,
+      rgba(92, 92, 92, 0.01) 62.5%,
+      rgba(92, 92, 92, 0.01) 75%,
+      rgba(56, 56, 56, 0.01) 75%,
+      rgba(56, 56, 56, 0.01) 87.5%,
+      rgba(253, 253, 253, 0.01) 87.5%,
+      rgba(253, 253, 253, 0.01) 100%
+    ),
+    linear-gradient(
+      247deg,
+      rgba(103, 103, 103, 0.02) 0%,
+      rgba(103, 103, 103, 0.02) 12.5%,
+      rgba(240, 240, 240, 0.02) 12.5%,
+      rgba(240, 240, 240, 0.02) 25%,
+      rgba(18, 18, 18, 0.02) 25%,
+      rgba(18, 18, 18, 0.02) 37.5%,
+      rgba(38, 38, 38, 0.02) 37.5%,
+      rgba(38, 38, 38, 0.02) 50%,
+      rgba(246, 246, 246, 0.02) 50%,
+      rgba(246, 246, 246, 0.02) 62.5%,
+      rgba(9, 9, 9, 0.02) 62.5%,
+      rgba(9, 9, 9, 0.02) 75%,
+      rgba(167, 167, 167, 0.02) 75%,
+      rgba(167, 167, 167, 0.02) 87.5%,
+      rgba(86, 86, 86, 0.02) 87.5%,
+      rgba(86, 86, 86, 0.02) 100%
+    ),
+    linear-gradient(90deg, hsl(194, 0%, 10%), hsl(194, 0%, 10%));
+}
+
+html .bg-grad {
+  background-image: linear-gradient(
+      158deg,
+      rgba(84, 84, 84, 0.03) 0%,
+      rgba(84, 84, 84, 0.03) 20%,
+      rgba(219, 219, 219, 0.03) 20%,
+      rgba(219, 219, 219, 0.03) 40%,
+      rgba(54, 54, 54, 0.03) 40%,
+      rgba(54, 54, 54, 0.03) 60%,
+      rgba(99, 99, 99, 0.03) 60%,
+      rgba(99, 99, 99, 0.03) 80%,
+      rgba(92, 92, 92, 0.03) 80%,
+      rgba(92, 92, 92, 0.03) 100%
+    ),
+    linear-gradient(
+      45deg,
+      rgba(221, 221, 221, 0.02) 0%,
+      rgba(221, 221, 221, 0.02) 14.286%,
+      rgba(8, 8, 8, 0.02) 14.286%,
+      rgba(8, 8, 8, 0.02) 28.572%,
+      rgba(52, 52, 52, 0.02) 28.572%,
+      rgba(52, 52, 52, 0.02) 42.858%,
+      rgba(234, 234, 234, 0.02) 42.858%,
+      rgba(234, 234, 234, 0.02) 57.144%,
+      rgba(81, 81, 81, 0.02) 57.144%,
+      rgba(81, 81, 81, 0.02) 71.42999999999999%,
+      rgba(239, 239, 239, 0.02) 71.43%,
+      rgba(239, 239, 239, 0.02) 85.71600000000001%,
+      rgba(187, 187, 187, 0.02) 85.716%,
+      rgba(187, 187, 187, 0.02) 100.002%
+    ),
+    linear-gradient(
+      109deg,
+      rgba(33, 33, 33, 0.03) 0%,
+      rgba(33, 33, 33, 0.03) 12.5%,
+      rgba(147, 147, 147, 0.03) 12.5%,
+      rgba(147, 147, 147, 0.03) 25%,
+      rgba(131, 131, 131, 0.03) 25%,
+      rgba(131, 131, 131, 0.03) 37.5%,
+      rgba(151, 151, 151, 0.03) 37.5%,
+      rgba(151, 151, 151, 0.03) 50%,
+      rgba(211, 211, 211, 0.03) 50%,
+      rgba(211, 211, 211, 0.03) 62.5%,
+      rgba(39, 39, 39, 0.03) 62.5%,
+      rgba(39, 39, 39, 0.03) 75%,
+      rgba(55, 55, 55, 0.03) 75%,
+      rgba(55, 55, 55, 0.03) 87.5%,
+      rgba(82, 82, 82, 0.03) 87.5%,
+      rgba(82, 82, 82, 0.03) 100%
+    ),
+    linear-gradient(
+      348deg,
+      rgba(42, 42, 42, 0.02) 0%,
+      rgba(42, 42, 42, 0.02) 20%,
+      rgba(8, 8, 8, 0.02) 20%,
+      rgba(8, 8, 8, 0.02) 40%,
+      rgba(242, 242, 242, 0.02) 40%,
+      rgba(242, 242, 242, 0.02) 60%,
+      rgba(42, 42, 42, 0.02) 60%,
+      rgba(42, 42, 42, 0.02) 80%,
+      rgba(80, 80, 80, 0.02) 80%,
+      rgba(80, 80, 80, 0.02) 100%
+    ),
+    linear-gradient(
+      120deg,
+      rgba(106, 106, 106, 0.03) 0%,
+      rgba(106, 106, 106, 0.03) 14.286%,
+      rgba(67, 67, 67, 0.03) 14.286%,
+      rgba(67, 67, 67, 0.03) 28.572%,
+      rgba(134, 134, 134, 0.03) 28.572%,
+      rgba(134, 134, 134, 0.03) 42.858%,
+      rgba(19, 19, 19, 0.03) 42.858%,
+      rgba(19, 19, 19, 0.03) 57.144%,
+      rgba(101, 101, 101, 0.03) 57.144%,
+      rgba(101, 101, 101, 0.03) 71.42999999999999%,
+      rgba(205, 205, 205, 0.03) 71.43%,
+      rgba(205, 205, 205, 0.03) 85.71600000000001%,
+      rgba(53, 53, 53, 0.03) 85.716%,
+      rgba(53, 53, 53, 0.03) 100.002%
+    ),
+    linear-gradient(
+      45deg,
+      rgba(214, 214, 214, 0.03) 0%,
+      rgba(214, 214, 214, 0.03) 16.667%,
+      rgba(255, 255, 255, 0.03) 16.667%,
+      rgba(255, 255, 255, 0.03) 33.334%,
+      rgba(250, 250, 250, 0.03) 33.334%,
+      rgba(250, 250, 250, 0.03) 50.001000000000005%,
+      rgba(231, 231, 231, 0.03) 50.001%,
+      rgba(231, 231, 231, 0.03) 66.668%,
+      rgba(241, 241, 241, 0.03) 66.668%,
+      rgba(241, 241, 241, 0.03) 83.33500000000001%,
+      rgba(31, 31, 31, 0.03) 83.335%,
+      rgba(31, 31, 31, 0.03) 100.002%
+    ),
+    linear-gradient(
+      59deg,
+      rgba(224, 224, 224, 0.03) 0%,
+      rgba(224, 224, 224, 0.03) 12.5%,
+      rgba(97, 97, 97, 0.03) 12.5%,
+      rgba(97, 97, 97, 0.03) 25%,
+      rgba(143, 143, 143, 0.03) 25%,
+      rgba(143, 143, 143, 0.03) 37.5%,
+      rgba(110, 110, 110, 0.03) 37.5%,
+      rgba(110, 110, 110, 0.03) 50%,
+      rgba(34, 34, 34, 0.03) 50%,
+      rgba(34, 34, 34, 0.03) 62.5%,
+      rgba(155, 155, 155, 0.03) 62.5%,
+      rgba(155, 155, 155, 0.03) 75%,
+      rgba(249, 249, 249, 0.03) 75%,
+      rgba(249, 249, 249, 0.03) 87.5%,
+      rgba(179, 179, 179, 0.03) 87.5%,
+      rgba(179, 179, 179, 0.03) 100%
+    ),
+    linear-gradient(
+      241deg,
+      rgba(58, 58, 58, 0.02) 0%,
+      rgba(58, 58, 58, 0.02) 25%,
+      rgba(124, 124, 124, 0.02) 25%,
+      rgba(124, 124, 124, 0.02) 50%,
+      rgba(254, 254, 254, 0.02) 50%,
+      rgba(254, 254, 254, 0.02) 75%,
+      rgba(52, 52, 52, 0.02) 75%,
+      rgba(52, 52, 52, 0.02) 100%
+    ),
+    linear-gradient(90deg, #ffffff, #ffffff);
 }
